[package]
name = "si7021"
edition = "2018"
version = "0.2.0"
authors = ["Klemens Schölhorn <klemens@schoelhorn.eu>"]
description = "I2C driver for the Si7021 hygrometer and thermometer"
documentation = "https://docs.rs/si7021"
repository = "https://github.com/klemens/si7021-rs"
readme = "README.md"
categories = ["embedded", "hardware-support"]
license = "Apache-2.0/MIT"

[dependencies]
embedded-hal = "0.2.3"
